@@ -1,6 +1,7 @@
 package core.com.module_11.srteam;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class StreamApiMain {
@@ -13,8 +14,11 @@ public class StreamApiMain {
                 .skip(5)
                 .map(n -> n * 10);
 
-        List<Integer> list = s.boxed().toList();
+//        List<Integer> list = s.boxed().toList();
+        List<Integer> list2 = s.boxed().collect(Collectors.toList());
 
-        System.out.println(list);
+
+//        System.out.println(list);
+        System.out.println(list2);
     }
 }
